[gd_scene load_steps=4 format=3 uid="uid://dghrh1jopsjdr"]

[ext_resource type="Script" uid="uid://cyroj16ulsdm6" path="res://Minigames/Tightengame/Tightengame.gd" id="1_nkg3a"]
[ext_resource type="Texture2D" uid="uid://ts7u02fgl6xh" path="res://Minigames/Wiregame/Background.png" id="2_4ydof"]
[ext_resource type="Texture2D" uid="uid://c2o1xcj7nrnlf" path="res://Minigames/Tightengame/clamps.png" id="3_ggu62"]

[node name="Tightengame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nkg3a")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_4ydof")

[node name="Background2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 883.0
offset_top = 58.0
offset_right = -13.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_ggu62")
stretch_mode = 4

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 1340.0
offset_top = 76.0
offset_right = 1512.0
offset_bottom = 1040.0
color = Color(0, 0, 0, 0.501961)

[node name="Lane" type="Control" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 1126.0
offset_top = -383.0
offset_right = -188.0
offset_bottom = -364.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 1286.0
offset_top = 47.0
offset_right = 1561.0
offset_bottom = 130.0
theme_override_font_sizes/font_size = 60
text = "Tighten!"

[node name="HitZone" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 1212.0
offset_top = 867.0
offset_right = 1630.0
offset_bottom = 946.0
color = Color(0.109804, 0.321569, 0, 0.403922)

[node name="Popup" type="Panel" parent="."]
layout_mode = 0
offset_left = 506.0
offset_top = 267.0
offset_right = 1300.0
offset_bottom = 615.0

[node name="Label" type="Label" parent="Popup"]
layout_mode = 0
offset_left = 29.0
offset_top = 55.0
offset_right = 774.0
offset_bottom = 278.0
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1

[node name="RotatingIndicator" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 802.0
offset_top = 739.0
offset_right = 961.0
offset_bottom = 879.0
